chore: refactor threading and added shutdown hook